recipe page setup

--- a/recipes/mashed_potatoes.html
+++ b/recipes/mashed_potatoes.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Recipe</title>
+    <title>Recipes</title>
 </head>
 <body>
-    <h1>Mugos Recipes</h1>
-    <a href="/recipes/mashed_potatoes.html">Mashed Potatoes</a>
+    <h1>Mashed Potatoes</h1>
 </body>
 </html>
