Recipe Page Content

--- a/recipes/mashed_potatoes.html
+++ b/recipes/mashed_potatoes.html
@@ -8,5 +8,33 @@
 </head>
 <body>
     <h1>Mashed Potatoes</h1>
+    <img src="./mashed.jpeg" alt="">
+    <h1>Description</h1>
+    <p>Mashed Potatoes is a mixture of pounded potatoes, heavy cream and some milk.</p>
+    <p>Some other people add basils or corriander to add a little color.</p>
+    <h1>Ingredients</h1>
+    <ul>
+        <li>5 large potatoes</li>
+        <li>1 tablespoon heavy cream</li>
+        <li>Half cup milk</li>
+        <li>Basils and/or corriander</li>
+        <li>Salt</li>
+        <li>(Optional) Black Pepper</li>
+    </ul>
+    <h1>Steps</h1>
+    <ol>
+        <li>Peal off your potatoes and wash them thoroughly</li>
+        <li>In boiling water add the potatoes and let them cook evenly</li>
+        <li>After around 20 minutes the potatoes should be ready, take out 
+            and sieve out the rest of the water if any remained.
+        </li>
+        <li>Take a masher murphy and mash the potatoes. Add salt to taste and 
+            add cream and milk in bits as you contionue mashing.
+        </li>
+        <li>When the mixture is to your liking add a touch of the basil or 
+            corrianders and serve while hot. </li>
+        <li>Tip: This meal works well with chicken curry. Which you will can find on
+            my <a href="">Chicken Curry Recipe</a>. </li>
+    </ol>
 </body>
 </html>
