--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Mugos Recipes</h1>
-    <a href="/recipes/mashed_potatoes.html">Mashed Potatoes</a>
+    <a href="./recipes/mashed_potatoes.html">Mashed Potatoes</a>
 </body>
 </html>
