add githeri and chicken curry recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Mugos Recipes</h1>
-    <a href="./recipes/mashed_potatoes.html">Mashed Potatoes</a>
+    <a href="./recipes/mashed_potatoes.html">Mashed Potatoes</a> <br>
+    <a href="./recipes/chicken_curry.html">Chicken Curry</a><br>
+    <a href="./recipes/githeri.html">Githeri</a>
 </body>
 </html>
