--- a/recipes/githeri.html
+++ b/recipes/githeri.html
@@ -7,8 +7,8 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Mashed Potatoes</h1>
-    <img src="../images/mashed.jpeg" alt="">
+    <h1>Githeri</h1>
+    <img src="../images/githeri.jpeg" alt="">
     <h1>Description</h1>
     <p>Mashed Potatoes is a mixture of pounded potatoes, heavy cream and some milk.</p>
     <p>Some other people add basils or corriander to add a little color.</p>
@@ -34,7 +34,7 @@
         <li>When the mixture is to your liking add a touch of the basil or 
             corrianders and serve while hot. </li>
         <li>Tip: This meal works well with chicken curry. Which you will can find on
-            my <a href="./chicken_curry.html">Chicken Curry Recipe</a>. </li>
+            my <a href="">Chicken Curry Recipe</a>. </li>
     </ol>
 </body>
 </html>
