modify githeri recipe

--- a/recipes/chicken_curry.html
+++ b/recipes/chicken_curry.html
@@ -10,31 +10,40 @@
     <h1>Chicken Curry</h1>
     <img src="../images/chicken.jpeg" alt="">
     <h1>Description</h1>
-    <p>Mashed Potatoes is a mixture of pounded potatoes, heavy cream and some milk.</p>
-    <p>Some other people add basils or corriander to add a little color.</p>
+    <p>Chicken cooked in an Indian style and mixed with spices to make a thick soup, 
+        hence the name curry.
+    </p>
+    <p>Chicken curry in most cases is served with rice, but can also go well with 
+        mashed potatoes or pasta.
+    </p>
     <h1>Ingredients</h1>
     <ul>
-        <li>5 large potatoes</li>
-        <li>1 tablespoon heavy cream</li>
-        <li>Half cup milk</li>
-        <li>Basils and/or corriander</li>
-        <li>Salt</li>
-        <li>(Optional) Black Pepper</li>
+        <li>Chicken preferable boneless.</li>
+        <li>3 large capsicums(red, yellow and green).</li>
+        <li>Carrots.</li>
+        <li>White onions, garlic and ginger.</li>
+        <li>Curry powder, salt, bay leaves.</li>
+        <li>Heavy cream.</li>
+        <li>(Optional) Black Pepper.</li>
     </ul>
     <h1>Steps</h1>
     <ol>
-        <li>Peal off your potatoes and wash them thoroughly</li>
-        <li>In boiling water add the potatoes and let them cook evenly</li>
-        <li>After around 20 minutes the potatoes should be ready, take out 
-            and sieve out the rest of the water if any remained.
+        <li>After washing your chicken, bring it boil for about 10 minutes.</li>
+        <li>Chop off the white onions into very small pieces and in a pan of
+            hot oil add them.
         </li>
-        <li>Take a masher murphy and mash the potatoes. Add salt to taste and 
-            add cream and milk in bits as you contionue mashing.
+        <li>Cut the capsicums and blend them. Crash ginger and garlic into a thick paste.
+            Finely chop the carrots into small cubes.
         </li>
-        <li>When the mixture is to your liking add a touch of the basil or 
-            corrianders and serve while hot. </li>
-        <li>Tip: This meal works well with chicken curry. Which you will can find on
-            my <a href="">Chicken Curry Recipe</a>. </li>
+        <li>Take the chicken off the boiling pan and let it cool for about 5 minutes.
+        </li>
+        <li>Add the garlic and ginger paste into the onions and let that fry for a minute. 
+            Be careful not to burn that as garlic burns easily. </li>
+        <li>Add the carrots, curry powder, bay leaves, salt, pepper and the chicken together 
+            and let them cook for about 30 minutes.</li>
+        <li>Add a little bit of cream to make the soup thick. You can use yorghut if no heavy cream</li>
+        <li>Tip: This meal works well with mashed potatoes. Which you will can find on
+            my <a href="./mashed_potatoes.html">Mashed Potatoes Recipe</a>. </li>
     </ol>
 </body>
 </html>
