--- a/recipes/githeri.html
+++ b/recipes/githeri.html
@@ -10,21 +10,21 @@
     <h1>Githeri</h1>
     <img src="../images/githeri.jpeg" alt="">
     <h1>Description</h1>
-    <p>Mashed Potatoes is a mixture of pounded potatoes, heavy cream and some milk.</p>
-    <p>Some other people add basils or corriander to add a little color.</p>
+    <p>Githeri is a Kenyan meal where you boil beans and maize together thoroughly.</p>
+    <p>After this pre-cook it is then fried to your own liking.</p>
     <h1>Ingredients</h1>
     <ul>
-        <li>5 large potatoes</li>
-        <li>1 tablespoon heavy cream</li>
-        <li>Half cup milk</li>
-        <li>Basils and/or corriander</li>
+        <li>Beans and maize</li>
+        <li>2 Capsicums</li>
+        <li>Carrots</li>
+        <li>Onions</li>
         <li>Salt</li>
         <li>(Optional) Black Pepper</li>
     </ul>
     <h1>Steps</h1>
     <ol>
-        <li>Peal off your potatoes and wash them thoroughly</li>
-        <li>In boiling water add the potatoes and let them cook evenly</li>
+        <li>Chop of all the veggies.</li>
+        <li>In a pan of hot oil</li>
         <li>After around 20 minutes the potatoes should be ready, take out 
             and sieve out the rest of the water if any remained.
         </li>
