--- a/recipes/mashed_potatoes.html
+++ b/recipes/mashed_potatoes.html
@@ -14,7 +14,7 @@
     <p>Some other people add basils or corriander to add a little color.</p>
     <h1>Ingredients</h1>
     <ul>
-        <li>5 large potatoes</li>
+        <li>5 large potatoes.</li>
         <li>1 tablespoon heavy cream</li>
         <li>Half cup milk</li>
         <li>Basils and/or corriander</li>
